# JWasm

./: .gitignore  .travis.yml  CLang.mak  CMakeLists.txt  GccUnix.mak  History.txt  License.txt  Msvc64.mak  Readme.txt  appveyor.yml  assemble.c  bin.c  cmdline.c  coff.c  condasm.c  data.c  dbgcv.c  directiv.c  equate.c  expans.c  expreval.c  extern.c  hll.c  input.c  invoke.c  label.c  macro.c  main.c  memalloc.c  omf.c  parser.c  preproc.c  proc.c  segment.c  string.c  trmem.c  types.c
Doc/: enh.txt  fixes.txt  gencode.txt  overview.txt  srclic.txt
H/: globals.h  inttype.h  memalloc.h  msgdef.h
Regress/: ABS1.ASO  ABS1.EXP  ABSEXT.ASO  ABSEXT.EXP  ABSSEG.ASN  ABSSEG2.ASM  ABSSEG3.ASM  ALIAS.ASZ  ALIAS1.ASX  ALIAS2.ASC  ALIAS2.EXP  ALIGN.ASM  ALIGN2.ASM  ALIGN3.ASO  ALIGN3.EXP  ALIGN4.ASM  ARITH1.ASM  ARITH2.ASM  ARITH3.ASO  ARITH3.EXP  ARITH641.ASM  ARPL.ASM  ASSUME1.ASM  ASSUME12.AS_  ASSUME13.ASO  ASSUME13.EXP  ASSUME2.ASM  ASSUME3.ASO  ASSUME3.EXP  ASSUME4.ASO  ASSUME4.EXP  ASSUME5.ASO  ASSUME5.EXP  ASSUME6.ASM  ASSUME7.ASO  ASSUME7.EXP  ASSUME8.ASO  ASSUME8.EXP  ASSUME9.ASO  ASSUME9.EXP  (+698 more)
